bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
  if ((90<n<110)==true||(190<n<210)==true) return true
            ^NearHundred:2: error: type mismatch;
 found   : Int(210)
 required: Boolean
  if ((90<n<110)==true||(190<n<210)==true) return true
                               ^